--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <body>
+  <body style="display: flex; justify-content: center">
     <div id="root"></div>
   </body>
 </html>
